--- a/Chicken_Tracker/src/main/webapp/_CSS/cadastro.css
+++ b/Chicken_Tracker/src/main/webapp/_CSS/cadastro.css
@@ -27,6 +27,10 @@ body + .container:first-of-type{
     text-align: left !important;
 }
 
+#inputFoto{
+    display: none;
+}
+
 /*DEMO*/
 .preview {
     margin: 10px;
