--- a/Chicken_Tracker/src/main/webapp/_CSS/negocios.css
+++ b/Chicken_Tracker/src/main/webapp/_CSS/negocios.css
@@ -7,3 +7,7 @@ and open the template in the editor.
     Created on : 05/04/2018, 21:13:44
     Author     : Usuario
 */
+
+.modal-header{
+    background-color: 	#0080ff;
+}
